[package]
name = "stytch"
description = "Unofficial library to use the Stych email flow in Rust"
version = "0.1.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Owen Griffiths <root@ogriffiths.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
